
	* DAnCE/NodeApplication/NodeApplication.cpp
	* DAnCE/ciao/Container_Impl.cpp
	* DAnCE/ciao/Container_Impl.h
        * DAnCE/ciao/NodeApplication_Impl.cpp
	* DAnCE/ciao/NodeApplication_Impl.h
	* DAnCE/ciao/NodeApplication_Impl.inl

          Added the abstraction layer of container interface. Reorganize
          the functionality between NodeApplication and Container.

	* tests/NodeApplicationTest/NodeApp_test_client_simple.cpp

          Modified this to test against the above change. This test
          could run successfully when we have 1 component hosted in
          1 container, which in turn hosted in 1 NodeApplication.

Wed Jan 19 21:41:48 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

 	* DAnCE/Config_Handlers/ADD_Handler.cpp
 	* DAnCE/Config_Handlers/ADD_Handler.h
 	* DAnCE/Config_Handlers/Any_Handler.cpp
 	* DAnCE/Config_Handlers/CEPE_Handler.h
 	* DAnCE/Config_Handlers/CRDD_Handler.h
 	* DAnCE/Config_Handlers/Config_Handlers.mpc
 	* DAnCE/Config_Handlers/IDD_Handler.h
 	* DAnCE/Config_Handlers/ID_Handler.h
 	* DAnCE/Config_Handlers/MDD_Handler.h
 	* DAnCE/Config_Handlers/PSPE_Handler.cpp
 	* DAnCE/Config_Handlers/Property_Handler.h
 	* DAnCE/Config_Handlers/RDD_Handler.h
 	* DAnCE/Config_Handlers/Singleton_IDREF_Map.h

          Fixed compilation warnings or errors.

Tue Jan 18 21:41:48 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* Config_Handlers/Basic_Deployment_Data.cpp:
	* Config_Handlers/Basic_Deployment_Data.hpp:
	* Config_Handlers/Deployment.cpp:
	* Config_Handlers/Deployment.hpp:
	* Config_Handlers/Singleton_IDREF_Map.h:
	* Config_Handlers/ccd.cpp:
	* Config_Handlers/ccd.hpp:
	* Config_Handlers/cdd.cpp:
	* Config_Handlers/cdd.hpp:
	* Config_Handlers/cdp.cpp:
	* Config_Handlers/cdp.hpp:
	* Config_Handlers/cid.cpp:
	* Config_Handlers/cid.hpp:
	* Config_Handlers/cpd.cpp:
	* Config_Handlers/cpd.hpp:
	* Config_Handlers/iad.cpp:
	* Config_Handlers/iad.hpp:
	* Config_Handlers/pcd.cpp:
	* Config_Handlers/pcd.hpp: