@@ -4,6 +4,7 @@
 #include "ciao/Client_init.h"
 #include "NodeAppTest_RoundTripC.h"
 #include "ace/Get_Opt.h"
+#include "assert.h"
 
 const char *ior = "file://test.ior";
 
@@ -51,12 +52,12 @@ main (int argc, char *argv[])
         orb->string_to_object(ior ACE_ENV_ARG_PARAMETER);
       ACE_TRY_CHECK;
 
-      Deployment::NodeApplication_var comserv =
+      Deployment::NodeApplication_var node_app =
         Deployment::NodeApplication::_narrow(tmp.in ()
                                              ACE_ENV_ARG_PARAMETER);
       ACE_TRY_CHECK;
 
-      if (CORBA::is_nil (comserv.in ()))
+      if (CORBA::is_nil (node_app.in ()))
         {
           ACE_ERROR_RETURN ((LM_DEBUG,
                              "Nil NodeApplication reference <%s>\n",
@@ -65,9 +66,9 @@ main (int argc, char *argv[])
         }
 
 
-      ACE_DEBUG ((LM_DEBUG, "Try installing Home\n"));
+      ACE_DEBUG ((LM_DEBUG, "Try installing Home and Component\n"));
 
-      Deployment::ImplementationInfo info;
+      Deployment::ComponentImplementationInfo info;
 
       // Add the names and entry points of each of the DLLs
       info.component_instance_name = "NodeAppTest_RoundTrip";
@@ -76,83 +77,81 @@ main (int argc, char *argv[])
       info.servant_dll = "NodeAppTest_RoundTrip_svnt";
       info.servant_entrypt = "createNodeAppTest_RoundTripHome_Servant";
 
-      // Install the NodeApplication Test component
-      ::Components::CCMHome_var home = comserv->install_home (info);
+      // Create a ContainerImplementationInfo sequence
+      Deployment::ContainerImplementationInfo container_info;
+      container_info.length (1);
+      container_info[0] = info;
+
+      // Create a NodeImplementationInfo sequence
+      Deployment::NodeImplementationInfo node_info;
+      node_info.length (1);
+      node_info[0] = container_info;
+
+      // Install test component and its home on NodeApplication
+      Deployment::ComponentInfos_var comp_info =
+        node_app->install (node_info ACE_ENV_ARG_PARAMETER);
       ACE_TRY_CHECK;
 
-      // Narrow the Home to the appropriate component
-      NodeAppTest::NodeAppTest_RoundTripHome_var home_var =
-        NodeAppTest::NodeAppTest_RoundTripHome::_narrow (home.in ());
+      assert (comp_info->length () == 1); //return 1 component objeref
 
+      const CORBA::ULong i = 0;
+      Components::CCMObject_ptr objref = (comp_info[i]).component_ref;
+
+      NodeAppTest::NodeAppTest_RoundTrip_var roundtrip_var =
+        NodeAppTest::NodeAppTest_RoundTrip::_narrow (objref ACE_ENV_ARG_PARAMETER);
       ACE_TRY_CHECK;
-      if (CORBA::is_nil (home_var.in ()))
+
+      if (CORBA::is_nil (roundtrip_var.in ()))
        {
          ACE_ERROR_RETURN ((LM_DEBUG,
-                            "Nil RoundTripHome reference\n"),
+                            "Nil RoundTrip reference\n"),
                             1);
        }
 
-      // Get Component from Home
-      ACE_DEBUG ((LM_DEBUG, "Try obtaining RoundTrip component ref from Home\n"));
-      NodeAppTest::NodeAppTest_RoundTrip_var roundtrip_comp_var =
-	NodeAppTest::NodeAppTest_RoundTrip::_narrow (
-						     home_var->create
-						     (ACE_ENV_SINGLE_ARG_PARAMETER)
-						     );
-      ACE_TRY_CHECK;
-      if (CORBA::is_nil (roundtrip_comp_var.in ()))
-       {
-         ACE_ERROR_RETURN ((LM_DEBUG,
-                            "Nil RoundTrip component reference\n"),
-                            1);
-       }
-
-      ACE_TRY_CHECK;
       // initialize the component
-      roundtrip_comp_var->ciao_postactivate ();
+      roundtrip_var->ciao_postactivate ();
       ACE_CHECK_RETURN (1);
-
 
       //get the provided facets info.
       Components::FacetDescriptions_var facets_info =
-	roundtrip_comp_var->get_all_facets (ACE_ENV_SINGLE_ARG_PARAMETER) ;
+      	roundtrip_var->get_all_facets (ACE_ENV_SINGLE_ARG_PARAMETER) ;
       ACE_TRY_CHECK;
 
       if ( facets_info->length () != 2 )
       {
-	ACE_DEBUG((LM_DEBUG, "Didn't get 2 facet back! but only %d\n",
-		   facets_info->length ()));
-	return 1;
+	      ACE_DEBUG((LM_DEBUG, "Didn't get 2 facet back! but only %d\n",
+		               facets_info->length ()));
+	      return 1;
       }
 
       // Invoke Operation on the Interface
       ACE_DEBUG ((LM_DEBUG, "Try cube_long operation on the Interface \n"));
 
       for (CORBA::ULong i = 0; i < 2; ++i )
-      {
-	NodeAppTest::LatencyTest_var latency_var
-	  = NodeAppTest::LatencyTest::_narrow ( (facets_info[i]->facet_ref ()));
-	ACE_DEBUG((LM_DEBUG, "Calling on facet %s\n", (facets_info[i]->name ())));
+        {
+	        NodeAppTest::LatencyTest_var latency_var
+	          = NodeAppTest::LatencyTest::_narrow ( (facets_info[i]->facet_ref ()));
+	        ACE_DEBUG((LM_DEBUG, "Calling on facet %s\n", (facets_info[i]->name ())));
 
-	ACE_TRY_CHECK;
+	        ACE_TRY_CHECK;
 
-	if ( CORBA::is_nil (latency_var.in ()) )
-	{
-	  ACE_DEBUG((LM_DEBUG, "get nil latency ref for facet%d\n", i));
-	  return 1;
-	}
+	        if ( CORBA::is_nil (latency_var.in ()) )
+	        {
+	          ACE_DEBUG((LM_DEBUG, "get nil latency ref for facet%d\n", i));
+	          return 1;
+	        }
 
-	CORBA::Long input = 1L;
-	CORBA::Long output =
-	  latency_var->cube_long (input ACE_ENV_ARG_PARAMETER);
-	if (input == output)
-	  ACE_DEBUG ((LM_DEBUG, "Retrun values matched!!\n"));
-	else
-	  {
-	    ACE_DEBUG ((LM_DEBUG, "Return values did not match: failure\n"));
-	    exit (1);
-	  }
-      }
+	        CORBA::Long input = 1L;
+	        CORBA::Long output =
+	          latency_var->cube_long (input ACE_ENV_ARG_PARAMETER);
+	        if (input == output)
+	          ACE_DEBUG ((LM_DEBUG, "Retrun values matched!!\n"));
+	        else
+	          {
+	            ACE_DEBUG ((LM_DEBUG, "Return values did not match: failure\n"));
+	            exit (1);
+	          }
+        }
       orb->destroy (ACE_ENV_SINGLE_ARG_PARAMETER);
       ACE_TRY_CHECK;
       ACE_DEBUG ((LM_DEBUG, "Test success!!\n"));
